# swagger.json
@@ -5,17 +5,7 @@
     "description": "API for managing contacts with CRUD operations",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
-  "servers": [
-    {
-      "url": "http://localhost:3000",
-      "description": "Local development server"
-    },
-    {
-      "url": "https://cse-341-ravg.onrender.com",
-      "description": "Production server"
-    }
-  ],
+  "host": "cse-341-ravg.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -24,7 +14,6 @@
     }
   ],
   "schemes": [
-    "http",
     "https"
   ],
   "paths": {
